[chromium] Preserve offscreen tiles instead of immediately recycling them https://bugs.webkit.org/show_bug.cgi?id=70352

Reviewed by James Robinson.

Tested by existing layout tests.

Prior to having a TextureManager class, tiled layers recycled their
textures internally to avoid reallocation. Unfortunately, it recycled
these tiles as soon as they went offscreen, even if they were still
valid. Instead, keep tiles around forever, letting the TextureManager
decide (via LRU) when to reclaim the underlying textures. This will
improve scrolling performance due to not needing to repaint tiles.

This change does lead to more texture reallocation for any textures
that get reclaimed, but the command buffer implementation already
pools and reuses texture ids, so it should not introduce additional
flush syncs. If there's any performance penalty, it'll be at the
driver level, but I'd prefer to measure that there's a problem before
prematurely optimizing and adding complexity to the TextureManager.

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::cleanupResources):
(WebCore::TiledLayerChromium::createTile):
(WebCore::TiledLayerChromium::prepareToUpdate):
* platform/graphics/chromium/TiledLayerChromium.h:

Canonical link: https://commits.webkit.org/86526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97809 268f45cc-cd09-0410-ab3c-d52691b4dbfc